# enmgt5400-project2

./: .gitignore  README.md  claude_desktop_config.json  exploit_tests.py  pyproject.toml  requirements.txt  server.py  server_tests.py
sample_projects/: calculator.py  data_pipeline.py  example.py  malicious.py  validators.py
