[project]
name = "Project_2"
version = "0.1.0"
description = "Code review MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cryptography==46.0.4",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "markdown-it-py==4.0.0",
    "matplotlib==3.10.8",
    "mcp[cli]==1.26.0",
    "mdurl==0.1.2",
    "numpy==2.4.2",
    "packaging==26.0",
    "pillow==12.1.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pywin32==311",
    "referencing==0.37.0",
    "rich==14.3.2",
    "rpds-py==0.30.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sse-starlette==3.2.0",
    "starlette==0.52.1",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.40.0",
]
